--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="kegdI_p3HoeLKNPJ23znOQ4lVULn_UU5ONRji6lawpE" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Unlock the Excitement: Kheloyar365 - Where Every Bet Matters</title>
